src/syntax/latex/snapshots/texlab__syntax__latex__tests__package_include_options.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\usepackage[foo = bar, baz, qux]{amsmath}\"#)"

---
ROOT@0..41
  PREAMBLE@0..41
    PACKAGE_INCLUDE@0..41
      PACKAGE_INCLUDE_COMMAND@0..11 "\\usepackage"
      BRACKET_GROUP_KEY_VALUE@11..32
        L_BRACKET@11..12 "["
        KEY_VALUE_BODY@12..31
          KEY_VALUE_PAIR@12..31
            KEY@12..16
              WORD@12..15 "foo"
              WHITESPACE@15..16 " "
            EQUALITY_SIGN@16..17 "="
            WHITESPACE@17..18 " "
            VALUE@18..31
              TEXT@18..31
                WORD@18..21 "bar"
                COMMA@21..22 ","
                WHITESPACE@22..23 " "
                WORD@23..26 "baz"
                COMMA@26..27 ","
                WHITESPACE@27..28 " "
                WORD@28..31 "qux"
        R_BRACKET@31..32 "]"
      BRACE_GROUP_WORD_LIST@32..41
        L_BRACE@32..33 "{"
        WORD@33..40 "amsmath"
        R_BRACE@40..41 "}"

