src/syntax/latex/snapshots/texlab__syntax__latex__tests__tikz_library_import_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\usetikzlibrary{foo}\"#)"

---
ROOT@0..20
  PREAMBLE@0..20
    TIKZ_LIBRARY_IMPORT@0..20
      TIKZ_LIBRARY_IMPORT_COMMAND@0..15 "\\usetikzlibrary"
      BRACE_GROUP_WORD_LIST@15..20
        L_BRACE@15..16 "{"
        WORD@16..19 "foo"
        R_BRACE@19..20 "}"

