src/syntax/latex/snapshots/texlab__syntax__latex__tests__unmatched_brackets_with_group.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"{][}\"#)"

---
ROOT@0..4
  PREAMBLE@0..4
    BRACE_GROUP@0..4
      L_BRACE@0..1 "{"
      ERROR@1..2 "]"
      MIXED_GROUP@2..3
        L_BRACKET@2..3 "["
        MISSING@3..3 ""
      R_BRACE@3..4 "}"

